--- a/html/menu.css
+++ b/html/menu.css
@@ -137,6 +137,6 @@ h1, h2, h3{
   .dropdown:hover .dropdown-content {
     display: block;
   }
-  #viewdb:hover{
+  #managedb:hover{
     background-image: linear-gradient(#333, black);
   }
